src/styles/global/_main.scss
@import "variables.scss";

$primary: $gewis-red !default;
$secondary: $gewis-grey !default;

// Imports
@import "~bootstrap/scss/bootstrap";
@import "~bootstrap-vue";
@import url('https://fonts.googleapis.com/css?family=Lato:400,400i,700,700i&display=swap');
@import url('https://fonts.googleapis.com/css?family=Raleway:500,500i,700,700i&display=swap');

// Global GEWIS font
body {
    font-family: "Lato", "Arial", sans-serif !important;
    font-weight: 400;
}

// Global GEWIS font for headers and lead text pieces
h1, h2, h3, h4, h5, h6, .lead, nav.navbar {
    font-family: 'Raleway', sans-serif !important;
    font-weight: 500;
}

/*
    General button styles
 */
.btn.btn-primary {
    background-color: $gewis-red;
    float: right;
    border-color: $gewis-red;
    border-radius: $border-radius;
}

.btn.btn-primary:hover {
    border-color: $gewis-red;
    color: $gewis-red;
    background-color: $text-primary;
}

.btn.btn-primary:focus {
    background-color: $gewis-red;
    border-color: $gewis-red;
    box-shadow: 0 0 0 0.2rem $gewis-red-shadow;
}

.btn.btn-secondary {
    background-color: $gewis-grey;
    float: right;
    border-color: $gewis-grey;
    border-radius: $border-radius;
}

.btn.btn-secondary:hover {
    border-color: $gewis-grey;
    color: $gewis-grey;
    background-color: $text-primary;
}

.btn.btn-secondary:focus {
    background-color: $gewis-grey;
    border-color: $gewis-grey;
    box-shadow: 0 0 0 0.2rem $gewis-grey-shadow;
}

.title-form {

    .b-form-datepicker {
        > button {
            display: none !important;
        }

        > label {
            padding-left: 0.75rem !important;
            text-transform: initial;
            color: black;
        }

        > label::after {
            color: $gewis-grey;
            position: absolute;
            right: 0.4em;
            top: 45%;
            vertical-align: 0.1em;
            content: "";
            border-top: 0.35em solid;
            border-right: 0.35em solid transparent;
            border-bottom: 0;
            border-left: 0.35em solid transparent;
        }
    }

    .row > div > :first-child {
        margin: auto 0;
    }

    .custom-checkbox {
        > label {
            line-height: 1.5;
        }
    }
}

/*
    Some General styles for tables, some classes here need to be specifically added (will be listed)
 */
.b-table {

    // Use this as table header style to make sure table has the correctly styled headers
    .table-header {
        border-bottom: 1px solid #cccccc;
        text-transform: uppercase;

        tr > th {
            font-weight: 400;
        }
    }

    td {
        vertical-align: middle;
    }

    tr {
        padding: 0.375rem 0;
    }

    // Style for transaction table that will make sure specific rows have different colors
    .date-row {
        background-color: #f2f2f2;
        font-weight: 700;

        td {
            text-align: center;
        }

        > td:not(:first-child) {
            display: none !important;
        }

        > td::before {
            content: none !important;
        }
    }

    .transaction-row+.transaction-row {
        border-top: 1px solid #cccccc;
    }
}

/*
 Global styles to change models
 */

.modal {
    .modal-content {
        border-radius: 0;
        border: none;
        min-height: 300px;

        > *,
        > div {
            padding-left: 2rem;
            padding-right: 2rem;
        }

        > * {
            margin-bottom: 0;
        }
    }

    .modal-header {
        border-bottom: none;
    }

    .modal-title {
        font-size: 1rem;
        color: $gewis-red;
        text-transform: uppercase;
    }

    .modal-body {
        padding: 0 1rem;
    }

    .modal-footer {
        border-top: none;
    }

    button {
        background-color: white !important;
        color: $gewis-grey !important;
        border: none !important;
        padding: .375rem 0.5rem !important;
        text-transform: uppercase;
    }

    input::-webkit-outer-spin-button,
    input::-webkit-inner-spin-button {
        -webkit-appearance: none;
        margin: 0;
    }

    input[type=number] {
        -moz-appearance: textfield;
    }

    label {
        font-weight: 700;
    }

    .form-group {
        margin-bottom: 0;

        > div {
            margin: auto 0;
        }

        .custom-file-label::after {
            height: 100%;
        }
    }
}

// To make sure that the view always has a certain height and the footer stays away from the content
main {
    margin: 1.5rem 0 #{60 + 1.5 * 16}px 0;
}

// Responsive font-size for the headers. Making sure everything stays nice and readable
h1 {
    font-size: 1.5rem;
}

@include media-breakpoint-up(sm) {
    h1 {
        font-size: 2rem;
    }

    .b-table {

        .table-header-3 {
            th:nth-of-type(3) {
                display: none;
            }
        }

        .table-header-5 {
            th:nth-of-type(5) {
                display: none;
            }
        }

        // Style for transaction table that will make sure specific rows have different colors
        .date-row {
            td {
                text-align: initial;
            }

            > td:first-child {
                min-width: 200px;
            }

            > td:not(:first-child) {
                display: table-cell !important;
            }
        }

        .transaction-row {
            border-top: none;

            > td:first-child {
                padding-left: 1rem;
                min-width: 200px;
            }
        }

        .transaction-row+.transaction-row {
            border-top: none;
        }
    }
}

@include media-breakpoint-up(md) {
    main {
        margin-top: 3rem;
    }

    h1 {
        font-size: 2.5rem;
    }
}

@include media-breakpoint-up(lg) {
    main {
        margin-top: 4rem;
    }

    .modal {
        input {
            width: 75% !important;
        }

        .form-group {
            .custom-file {
                width: 75%;
            }
        }
    }
}

